# udemy_softwarepattern_cpp

./: CMakeLists.txt  README.md  _CMakePresets.json
Singleton/: CMakeLists.txt  README.md
Singleton/DependencyInjectionSingleton/: CMakeLists.txt  DiSingleton.cpp  README.md
Singleton/DiContainer/: CMakeLists.txt  DiContainerSingleton.cpp  README.md
Singleton/Monostate/: CMakeLists.txt  README.md  monostate.cpp
Singleton/Multiton/: CMakeLists.txt  Multiton.cpp  README.md
Singleton/Singleton/: CMakeLists.txt  README.md  Singleton.cpp  capitals.txt
Singleton/homework/: singleton_homework.cpp
adapter/: CMakeLists.txt  README.md
adapter/basic_adapter/: CMakeLists.txt  README.md  basic_adapter.cpp
adapter/caching_adapter/: CMakeLists.txt  README.md  caching_adapter.cpp
adapter/homework/: CMakeLists.txt  README.md  homework_adapter.cpp
bridge/: CMakeLists.txt  README.md
bridge/bridge_implementation/: CMakeLists.txt  README.md  bridge_implementation.cpp
bridge/homework/: CMakeLists.txt  README.md  bridge_homework.cpp
bridge/pimpl_idiom/: CMakeLists.txt  Person.cpp  Person.hpp  README.md  main.cpp
bridge/shrink_wrapped_pimpl/: CMakeLists.txt  Foo.cpp  Foo.hpp  README.md  pimpl.cpp  pimpl.hpp  shrink_wrapped_pimpl.cpp
builder/: CMakeLists.txt  README.md
builder/basic_builder/: CMakeLists.txt  READMD.md  bad_builder_example.cpp  basic_builder.cpp
builder/fluent_builder/: CMakeLists.txt  README.md  fluent_builder.cpp  fluent_builder_forced.cpp
builder/homework/: CMakeLists.txt  README.md  homework_builder.cpp
builder/multi_builder/: CMakeLists.txt  README.md
builder/multi_builder/include/: Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.hpp  PersonJobBuilder.hpp
builder/multi_builder/src/: main.cpp
builder/uniform_initialization_builder/: CMakeLists.txt  README.md  uniform_init_builder.cpp
chain_of_responsability/: CMakeLists.txt  README.md
chain_of_responsability/homework/: CMakeLists.txt  README.md  cor_homework.cpp
chain_of_responsability/message_broker/: CMakeLists.txt  README.md  message_broker.cpp
chain_of_responsability/pointer_cor/: CMakeLists.txt  README.md  pointer_cor.cpp
command/: CMakeLists.txt  README.md
command/command_and_undo/: CMakeLists.txt  README.md  command_and_undo.cpp
command/command_homework/: README.md  command_homework.cpp
command/composite_command/: CMakeLists.txt  README.md  composite_command.cpp
composite/: CMakeLists.txt  README.md
composite/array_backed_properties/: CMakeLists.txt  README.md  array_backed_properties.cpp
composite/composite_via_abstract_base_class/: CMakeLists.txt  README.md  composite_geometric_example.cpp
composite/enum_creature_example/: CMakeLists.txt  README.md
composite/homework/: CMakeLists.txt  composite_homework.cpp  exercise.cpp  exercise.hpp
composite/neuron_example/: CMakeLists.txt  README.md  neuron_example.cpp
decorator/: CMakeLists.txt  README.md
decorator/dynamic_decorator/: CMakeLists.txt  README.md  dynamic_decorator.cpp
decorator/functional_decorator/: CMakeLists.txt  README.md  functional_decorator.cpp
decorator/functional_decorator/variadic_templates/: CMakeLists.txt  README.md  variadic_templates.cpp
decorator/homework/: CMakeLists.txt  decorator_homework.cpp
decorator/static_decorator/: CMakeLists.txt  README.md  static_decorator.cpp
decorator/static_decorator/SFINAE/: CMakeLists.txt  README.md  sfinae.cpp
decorator/static_decorator/concepts/: CMakeLists.txt  README.md  concepts.cpp  traits_class.cpp
decorator/static_decorator/perfect_forwarding/: CMakeLists.txt  README.md  perfect_forwarding.cpp
decorator/static_decorator/traits_classes/: CMakeLists.txt  README.md  traits_class.cpp
facade/: README.md
factory/: CMakeLists.txt  README.md
factory/abstract_factory/: CMakeLists.txt  DrinkFactory.hpp  HotDrink.hpp  README.md  main.cpp
factory/factory/: CMakeLists.txt  README.md  factory.cpp
factory/factory_method/: CMakeLists.txt  README.md  factory_method.cpp
factory/functional_factory/: CMakeLists.txt  DrinkFactory.hpp  HotDrinkFactory.hpp  README.md  main.cpp
factory/homework/: CMakeLists.txt  README.md  factories_homework.cpp
factory/inner_factory/: CMakeLists.txt  README.md  inner_factory.cpp
flyweight/: CMakeLists.txt  README.md
flyweight/boost_flyweight/: CMakeLists.txt  README.md  boost_flyweight.cpp
flyweight/handmade_flyweight/: CMakeLists.txt  README.md  handmade_flyweight.cpp
flyweight/homework/: CMakeLists.txt  flyweight_homework.cpp
flyweight/range_flyweight/: CMakeLists.txt  README.md  range_flyweight.cpp
interpreter/: CMakeLists.txt  README.md
interpreter/handmade_interpreter/: CMakeLists.txt  README.md  handmade_interpreter.cpp
interpreter/homework_interpreter/: CMakeLists.txt  homework_interpreter.cpp
iterator/: CMakeLists.txt  README.md
iterator/boost_iterator_facade/: CMakeLists.txt  README.md  boost_iterator.cpp
iterator/iterator_homework/: CMakeLists.txt  README.md  iterator_homework.cpp
iterator/self_written_tree_iterator/: CMakeLists.txt  README.md  self_written_tree_iterator.cpp
iterator/self_written_tree_iterator_coroutines/: CMakeLists.txt  README.md  self_written_tree_iterator_coroutines.cpp
iterator/stl_iterators/: CMakeLists.txt  README.md  stl_iterators.cpp
mediator/: CMakeLists.txt  README.md
mediator/chatroom_example/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.hpp  Person.cpp  Person.hpp  README.md  main.cpp
mediator/game_observer_example/: CMakeLists.txt  README.md  game_mediator_example.cpp
mediator/homework_mediator/: CMakeLists.txt  README.md  homework_mediator.cpp
memento/: CMakeLists.txt  README.md
memento/memento_example/: CMakeLists.txt  README.md  memento_example.cpp
memento/memento_homework/: CMakeLists.txt  README.md  (+1 more)
observer/: CMakeLists.txt  README.md
prototype/: CMakeLists.txt  README.md
proxy/: CMakeLists.txt  README.md
solid_principles/: CMakeLists.txt
state/: CMakeLists.txt  README.md
strategy/: CMakeLists.txt  README.md
template_pattern/: CMakeLists.txt  README.md
visitor/: CMakeLists.txt  README.md
(+115 files in other folders)
